# shuru

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  funding.json  install.sh
.github/: FUNDING.yml
.github/workflows/: pages.yml  release.yml  rust.yml
.well-known/: funding-manifest-urls
crates/shuru-ai/: Cargo.toml
crates/shuru-ai/src/: context.rs  engine.rs  lib.rs  plan.rs  repl.rs
crates/shuru-ai/src/assets/prompts/: system_prompt.txt
crates/shuru-ai/src/client/: ai_client.rs  client_factory.rs  gemini_client.rs  openai_client.rs
crates/shuru-cli/: Cargo.toml
crates/shuru-cli/src/: commands.rs  lib.rs
crates/shuru-cli/src/completions/: shuru.fish
crates/shuru-core/: Cargo.toml
crates/shuru-core/src/: config.rs  error.rs  global_config.rs  lib.rs  task_config.rs  version_config.rs
crates/shuru-core/src/utils/: fuzzy_match.rs  mod.rs
crates/shuru-tools/: Cargo.toml
crates/shuru-tools/src/: lib.rs
crates/shuru-tools/src/task_runner/: mod.rs  runner.rs
crates/shuru-tools/src/version_manager/: mod.rs  node_version_manager.rs
examples/dependent-node-tasks/: shuru.toml
examples/fullstack-node-python/: shuru.toml
examples/simple-node-app/: shuru.toml
examples/simple-python-app/: shuru.toml
examples/task-env/: shuru.toml
pages/: index.html  main.js  script.js  style.css  styles.css
src/: command_runner.rs  commands.rs  config.rs  error.rs  global_config.rs  lib.rs  main.rs  util.rs
src/ai/: error.rs  js_indexer.rs  mod.rs  repl.rs
src/completions/: bash.sh  shuru.fish  zsh.sh
src/tools/: mod.rs
src/tools/ai/: context.rs  engine.rs  mod.rs  plan.rs  progress_tracker.rs  repl.rs
src/tools/ai/assets/prompts/: system_prompt.txt
src/tools/ai/client/: ai_client.rs  client_factory.rs  gemini_client.rs  mod.rs  openai_client.rs
src/tools/ai/prompts/: system_prompt.txt
src/tools/task_runner/: command_runner.rs  mod.rs  runner.rs  shell.rs  shell_type.rs  task_config.rs
src/tools/version_manager/: compat.rs  mod.rs  node_version_manager.rs  python_version_manager.rs  version_validator.rs  versioned_command.rs
src/utils/: core_utils.rs  fuzzy_match.rs  mod.rs
src/version_manager/: mod.rs  node_version_manager.rs  python_version_manager.rs  versioned_command.rs
