[package]
name = "shuru-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
reqwest.workspace = true
serde.workspace = true
flate2.workspace = true
tar.workspace = true
toml.workspace = true
dirs.workspace = true
strum.workspace = true
dialoguer.workspace = true
